# POC_Enclave

./: .gitignore  Makefile  README.md
app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
app/src/: ecalls.rs  main.rs  structs.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h
enclave/src/: lib.rs
