[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2018"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git" }
rocket = "0.5.0-dev"
serde_json = "1.0"
serde = { version="=1.0.118", features = ["derive"] }
serde_derive = "*"
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_crypto_helper = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "v1.1.3"}
serde-bytes-repr = "0.1.5"
base64 = "0.13.0"
hex = "0.4.3"
serde_bytes = "0.11.5"
bincode = "1.3.2"
figment = { version = "0.9", features = ["env", "toml", "json"] }

[dependencies.rocket_contrib]
version = "0.5.0-dev"
default-features = false
features = ["json"]

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }

[dev-dependencies]
serde_bytes = "0.11.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_alloc = { path = "../../../sgx_alloc"}



