[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { path = "../../../sgx_libc" }
sgx_tseal = { path = "../../../sgx_tseal" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_types = { path = "../../../sgx_types" }

